--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.1.2",
+    "typescript-styled-plugin": "^0.18.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
